--- a/recipes/gcc-cross-aarch64/.config
+++ b/recipes/gcc-cross-aarch64/.config
@@ -28,7 +28,7 @@ CT_ALLOW_BUILD_AS_ROOT_SURE=y
 CT_LOCAL_TARBALLS_DIR="src"
 # CT_SAVE_TARBALLS is not set
 CT_WORK_DIR="${CT_TOP_DIR}/.build"
-CT_PREFIX_DIR="${PREFIX}"
+CT_PREFIX_DIR="${SRC_DIR}/prefix"
 CT_RM_RF_PREFIX_DIR=n
 CT_REMOVE_DOCS=y
 CT_PREFIX_DIR_RO=y
@@ -297,7 +297,7 @@ CT_BINUTILS_FOR_TARGET_BFD=y
 # C-library
 #
 CT_LIBC="glibc"
-CT_LIBC_VERSION="2.23"
+CT_LIBC_VERSION="2.19"
 CT_LIBC_glibc=y
 # CT_LIBC_musl is not set
 # CT_LIBC_uClibc is not set
@@ -307,18 +307,18 @@ CT_THREADS="nptl"
 # CT_LIBC_GLIBC_CUSTOM is not set
 # CT_CC_GLIBC_SHOW_LINARO is not set
 # CT_LIBC_GLIBC_V_2_24 is not set
-CT_LIBC_GLIBC_V_2_23=y
+# CT_LIBC_GLIBC_V_2_23=y
 # CT_LIBC_GLIBC_V_2_22 is not set
 # CT_LIBC_GLIBC_V_2_21 is not set
 # CT_LIBC_GLIBC_V_2_20 is not set
-# CT_LIBC_GLIBC_V_2_19 is not set
+CT_LIBC_GLIBC_V_2_19=y
 # CT_LIBC_GLIBC_V_2_18 is not set
 # CT_LIBC_GLIBC_V_2_12_2 is not set
 # CT_LIBC_GLIBC_V_2_8 is not set
 # CT_LIBC_GLIBC_V_2_6 is not set
 # CT_LIBC_GLIBC_V_2_5 is not set
-CT_LIBC_GLIBC_2_23_or_later=y
-CT_LIBC_GLIBC_2_20_or_later=y
+CT_LIBC_GLIBC_2_23_or_later=n
+CT_LIBC_GLIBC_2_20_or_later=n
 CT_LIBC_mingw_AVAILABLE=y
 CT_LIBC_musl_AVAILABLE=y
 CT_LIBC_newlib_AVAILABLE=y
